Get coverage testing.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,9 @@
 envlist = py33, py34, py35
 
 [testenv]
-commands = {envpython} -m pytest
+commands =
+    {envpython} -m coverage run -m pytest
+    {envpython} -m coverage html -d htmlcov/{envname}
 deps =
     pytest
     coverage
