--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,10 @@ python:
   - "3.5-dev" # 3.5 development branch
   - "3.6-dev" # 3.6 development branch
   - "nightly" # currently points to 3.7-dev
+install:
+  pip install coveralls
 # command to run tests
-script: python -m pytest
+script:
+  coverage run --source=class_namespaces -m pytest
+after_success:
+  coveralls
