--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ python:
   - "3.6-dev" # 3.6 development branch
   - "nightly" # currently points to 3.7-dev
 install:
-  pip install coveralls
+  - pip install coveralls
+  - pip install codecov
 # command to run tests
 script:
   coverage run --source=class_namespaces -m pytest
 after_success:
-  coveralls
+  - coveralls
+  - codecov
