--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ script:
 after_success:
   - coveralls
   - codecov
+addons:
+    code_climate:
+        repo_token: 3d0451505f214ce48df076eef5d02e4b606a6be6eea4e3ca70cbbb56e24270fd
