--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,6 +1,6 @@
 codecov:
   notify:
-    require_ci_to_pass: no
+    require_ci_to_pass: yes
 
 coverage:
   precision: 2
@@ -24,3 +24,7 @@ comment:
   layout: "header, diff"
   behavior: default
   require_changes: no
+
+codecov:
+  ci:
+    - !appveyor
