Test coverage and pytest separately, revealing in the process that the 3.3 weirdness was from coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,66 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py33, py34, py35, py36
+envlist = {py33,py34,py35,py36}-{pytest,coverage}
 
-[testenv]
+[pytest]
+commands =
+    {envpython} -m pytest
+deps =
+    pytest
+
+[coverage]
 commands =
     {envpython} -m coverage run -m pytest
     {envpython} -m coverage html -d htmlcov/{envname}
 deps =
-    pytest
     coverage
+    {[pytest]deps}
+
+[testenv:py33-pytest]
+commands =
+    {[pytest]commands}
+deps =
+    {[pytest]deps}
+
+[testenv:py34-pytest]
+commands =
+    {[pytest]commands}
+deps =
+    {[pytest]deps}
+
+[testenv:py35-pytest]
+commands =
+    {[pytest]commands}
+deps =
+    {[pytest]deps}
+
+[testenv:py36-pytest]
+commands =
+    {[pytest]commands}
+deps =
+    {[pytest]deps}
+
+[testenv:py33-coverage]
+commands =
+    {[coverage]commands}
+deps =
+    {[coverage]deps}
+
+[testenv:py34-coverage]
+commands =
+    {[coverage]commands}
+deps =
+    {[coverage]deps}
+
+[testenv:py35-coverage]
+commands =
+    {[coverage]commands}
+deps =
+    {[coverage]deps}
+
+[testenv:py36-coverage]
+commands =
+    {[coverage]commands}
+deps =
+    {[coverage]deps}
