Parameterize the tox file so it's not gigantic and hand-rolled.

--- a/tox.ini
+++ b/tox.ini
@@ -20,50 +20,10 @@ deps =
     coverage
     {[pytest]deps}
 
-[testenv:py33-pytest]
+[testenv]
 commands =
-    {[pytest]commands}
+    pytest: {[pytest]commands}
+    coverage: {[coverage]commands}
 deps =
-    {[pytest]deps}
-
-[testenv:py34-pytest]
-commands =
-    {[pytest]commands}
-deps =
-    {[pytest]deps}
-
-[testenv:py35-pytest]
-commands =
-    {[pytest]commands}
-deps =
-    {[pytest]deps}
-
-[testenv:py36-pytest]
-commands =
-    {[pytest]commands}
-deps =
-    {[pytest]deps}
-
-[testenv:py33-coverage]
-commands =
-    {[coverage]commands}
-deps =
-    {[coverage]deps}
-
-[testenv:py34-coverage]
-commands =
-    {[coverage]commands}
-deps =
-    {[coverage]deps}
-
-[testenv:py35-coverage]
-commands =
-    {[coverage]commands}
-deps =
-    {[coverage]deps}
-
-[testenv:py36-coverage]
-commands =
-    {[coverage]commands}
-deps =
-    {[coverage]deps}
+    pytest: {[pytest]deps}
+    coverage: {[coverage]deps}
