--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "3.6-dev" # 3.6 development branch
   - "nightly" # currently points to 3.7-dev
 install:
-  - pip install .
+  - pip install -e .
   - pip install coveralls
   - pip install codecov
   - pip install codeclimate-test-reporter
